--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/AreaPubblica.styles.css" asp-append-version="true" />
-
+	<link rel="icon" href="~/Sources/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="~/Sources/favicon.ico" type="image/x-icon" />
 	<style>
 		.navbar-custom {
 			background-color: #12304F;
