--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -111,10 +111,10 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item">
+                    @*         <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/Comunicazioni/Add">Nuova Comunicazione</a>
 
-                            </li>
+                            </li> *@
 
                             <li class="nav-item">
 								<a class="nav-link active" aria-current="page" href="/Faq/Faq">FAQ</a>
