--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -134,6 +134,31 @@
 				</div>
 			</div>
 
+			<div class="mt-4">
+				<!-- Button trigger modal -->
+				<button type="button" class="btn text-muted" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+					Info
+				</button>
+
+				<!-- Modal -->
+				<div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h1 class="modal-title fs-5" id="staticBackdropLabel">informazioni d'uso</h1>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<p>Nella pagina corrente, l'utente può leggere e rispondere alle sue comunicazioni.</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 
 		</div>
 	</div>
