--- a/AreaDocente/Views/Prove/List.cshtml
+++ b/AreaDocente/Views/Prove/List.cshtml
@@ -1,5 +1,40 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<AreaDocente.Models.Entities.MVCPROVA>
+
+<div class="container my-5">
+    <h1>Elenco Lezioni</h1>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Esame</th>
+                <th>Titolo lezione</th>
+                <th>Video</th>
+                <th>Azioni</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var prova in Model)
+            {
+                <tr>
+                    @* <td>@prova.Esame?.TitoloEsame</td>
+                    <td>@prova.Titolo</td>
+                    <td></td>
+                    <td>
+                        <a class="btn btn-warning btn-sm" asp-controller="Lezioni" asp-action="Edit" asp-route-id="@lezioni.K_Lezione">
+                            <i class="bi bi-pencil-square me-1"></i> Modifica
+                        </a>
+                    </td> *@
+                </tr>
+            }
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4">
+                    <a class="btn btn-success" asp-controller="Lezioni" asp-action="Add">
+                        <i class="bi bi-plus-circle me-1"></i> Inserisci nuova lezione
+                    </a>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
