--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -74,7 +74,7 @@
             <div class="sticky-top">
                 <nav class="navbar navbar-expand-lg navbar-custom">
                     <div class="container">
-                        <a class="navbar-brand me-3" href="#">
+                        <a class="navbar-brand me-3" href="Homepage.aspx">
                             <img src="resources/logonobg.png" height="50px" alt="Logo">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -129,7 +129,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="btn btn-light btn-sm" href="#">Logout</a>
+                                    <a class="btn btn-light btn-sm" href='<%# "https://localhost:7050/Studenti/Show?cod=" + Eval("K_Studente") + "&usr=" + Eval("Email") + "&r=s" %>'>Logout</a>
                                 </li>
                             </ul>
                         </div>
