--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -4,7 +4,7 @@
 	<div>
 
 
-		<h1 style="font-size:60px;"> Come Funziona?</h1>
+		<h1> Come Funziona?</h1>
 
 		<p>
 			Studiare con la nostra università online è semplice e flessibile. <br>
