--- a/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
@@ -5,11 +5,11 @@
 						.GroupBy(x => x.Facolta);
 }
 
-<div class="container mb-5" style="padding-top: 120px;">
+<div class="container" style="padding-top: 120px;">
 	<div class="row">
-		<h1 class="mt-3">Esami e Docenti</h1>
+		<h1 class="mb-4">Esami e Docenti</h1>
 		<div class="col-md-8">
-			<div class="mt-2 mb-5">
+			<div class="mb-4">
 				Consulta <b>l'elenco completo dei docenti</b> per ogni corso e facoltà, insieme agli esami che tengono.
 				Scopri le materie che insegnano per organizzare al meglio il tuo percorso di studi e scegliere consapevolmente le discipline che più ti interessano!
 			</div>
@@ -47,8 +47,8 @@
 											@foreach (var esame in docente)
 											{
 												<li class="list-group-item">
-													<nobr class="text-primary">Esame:</nobr> @esame.Esame <br />
-													<strong>Corso:</strong> @esame.Corso
+													<nobr>Esame:</nobr> <a class="text-primary">@esame.Esame</a>  <br />
+													Corso: <strong>@esame.Corso</strong>
 												</li>
 											}
 										</ul>
@@ -65,8 +65,4 @@
 			<img src="~/sources/docentelavagna.png" class="img-fluid rounded shadow" alt="Docente alla lavagna" />
 		</div>
 	</div>
-</div>
-
-
-<div style="height:42vh;">
 </div>
