--- a/AreaPubblica/Views/OffertaFormativa/Programma.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/Programma.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container" style="padding-top: 120px; padding-bottom: 100px;">
 	<div class="row">
-		<h1 class="mb-4 mt-5">Programma dei Corsi</h1>
+		<h1 class="mb-4">Programma dei Corsi</h1>
 
 		<div class="col-lg-8 col-md-12">
 			<div class="mb-4">
@@ -52,8 +52,8 @@
 												@foreach (var item in corso)
 												{
 													<li class="list-group-item">
-														<nobr class="text-primary">Esame:</nobr> @item.Esame <br />
-														<strong>Docente:</strong> @item.NomeDocente @item.CognomeDocente
+														<nobr>Esame:</nobr> <a class="text-primary">@item.Esame</a> <br />
+														Docente: <strong>@item.NomeDocente @item.CognomeDocente</strong>
 													</li>
 												}
 											</ul>
