--- a/AreaDocente/Views/Lezioni/List.cshtml
+++ b/AreaDocente/Views/Lezioni/List.cshtml
@@ -19,12 +19,12 @@
                     <td>@lezioni.Esame?.TitoloEsame</td>
                     <td>@lezioni.Titolo</td>
                     <td>
-                        <a target="_blank" href="@lezioni.Video" class="btn btn-outline-info btn-sm">
+                        <a target="_blank" href="@lezioni.Video" class="btn btn-info btn-sm">
                             <i class="bi bi-play-circle-fill me-1"></i> Guarda
                         </a>
                     </td>
                     <td>
-                        <a class="btn btn-warning btn-sm" asp-controller="Lezioni" asp-action="Edit" asp-route-id="@lezioni.K_Lezione">
+                        <a class="btn btn-primary btn-sm" asp-controller="Lezioni" asp-action="Edit" asp-route-id="@lezioni.K_Lezione">
                             <i class="bi bi-pencil-square me-1"></i> Modifica
                         </a>
                     </td>
