Lista Prove funzionante

--- a/AreaDocente/Views/Home/FAQ.cshtml
+++ b/AreaDocente/Views/Home/FAQ.cshtml
@@ -11,7 +11,7 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading1">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
                             1. Come posso usare il pannello del docente?
                         </button>
                     </h2>
