--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page - Docente";
 }
-<div class="container pb-3 mt-5">
+<div class="container pb-3 mt-2">
     <div class="container-fluid my-5">
         <div class="mb-3">
-            <h2 class="text-center">Pannello del docente</h2>
+            <h2 class="text-start">Pannello del docente</h2>
         </div>
 
         <div class="row gy-4 gx-md-2 gx-lg-0 justify-content-around">
