--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 		left: 0;
 		width: 100%;
 		height: 80%; /* Puoi aumentare o diminuire */
-		background: linear-gradient( to top, rgba(0, 0, 0, 1) 0%, /* più scuro alla base */
+		background: linear-gradient( to top, rgba(0, 0, 0, 0.8) 0%, /* più scuro alla base */
 		rgba(0, 0, 0, 0) 100% /* completamente trasparente sopra */
 		);
 		pointer-events: none; /* così il carousel continua a funzionare normalmente */
@@ -39,6 +39,12 @@
 		width: 100%;
 	}
 
+	.carousel-inner video {
+		object-fit: cover;
+		height: 95vh;
+		width: 100%;
+	}
+
 </style>
 
 
@@ -54,13 +60,23 @@
 
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="~/Sources/StudendeConCappello.gif" class="d-block w-100" alt="GIF 1">
+					<video class="img-fluid w-100" autoplay loop muted>
+						<source src="~/Sources/2002527-hd_1920_1080_30fps.mp4" type="video/mp4">
+						Il tuo browser non supporta il tag video.
+					</video>
+				</div>
+
+				<div class="carousel-item">
+					<video class="img-fluid w-100" autoplay loop muted>
+						<source src="~/Sources/7712357-hd_1920_1080_30fps.mp4" type="video/mp4">
+						Il tuo browser non supporta il tag video.
+					</video>
 				</div>
 				<div class="carousel-item">
-					<img src="~/Sources/SrudendessaInPiedi.gif" class="d-block w-100 " alt="GIF 2">
-				</div>
-				<div class="carousel-item">
-					<img src="~/Sources/StudendtiGiosi.gif" class="d-block w-100" alt="GIF 3">
+					<video class="img-fluid w-100" autoplay loop muted>
+						<source src="~/Sources/4121618-uhd_3840_2160_25fps.mp4" type="video/mp4">
+						Il tuo browser non supporta il tag video.
+					</video>
 				</div>
 			</div>
 
