--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -156,9 +156,9 @@
 						@{
 							var ruolo = Context.Session.GetString("r");
 						}
-						<form method="post" asp-action="Add">
-							@if (ruolo == "d")
-							{
+						@if (ruolo == "d")
+						{
+							<form method="post" asp-action="AddStudente">
 								<div class="mt-3">
 									<label class="form-label">Esame</label>
 									<select asp-for="AddComunicazione.K_Esame" asp-items="@ViewBag.EsamiList" class="form-select" onchange="this.form.submit()">
@@ -166,51 +166,66 @@
 									</select>
 									<span asp-validation-for="AddComunicazione.K_Esame" class="text-danger"></span>
 								</div>
-							}
-
-							@if (ruolo == "d" && ViewBag.SelectedKEsame != null)
-							{
-								<input type="hidden" asp-for="AddComunicazione.K_Esame" value="@ViewBag.SelectedKEsame" />
-							}
-
-							@if (ruolo == "d" || ruolo == "a")
-							{
+								@if (ViewBag.SelectedKEsame != null)
+								{
+									<input type="hidden" asp-for="AddComunicazione.K_Esame" value="@ViewBag.SelectedKEsame" />
+								}
 								<div class="mt-3">
-									<label class="form-label">Studenti</label>
+									<label class="form-label">Destinatari</label>
 									<select asp-for="AddComunicazione.K_Studente" asp-items="@ViewBag.StudentiList" class="form-select" required>
-										<option selected disabled>-- Seleziona uno studente --</option>
-										@if (Context.Session.GetString("r") == "d")
-										{
-											<option value="">Amministrazione</option>
-										}
+										<option selected disabled>-- Seleziona un destinatario --</option>
+										<option value="">Amministrazione</option>
 									</select>
 									<span asp-validation-for="AddComunicazione.K_Studente" class="text-danger"></span>
 								</div>
-							}
-
-							@if (ruolo == "s" || ruolo == "a")
-							{
-								<div class="mt-3">
-									<label class="form-label">Docenti</label>
-									<select asp-for="AddComunicazione.K_Docente" asp-items="@ViewBag.DocentiList" class="form-select" required>
-										<option selected disabled>-- Seleziona un docente --</option>
-										@if (ruolo == "s")
-										{
-											<option value="">Amministrazione</option>
-										}
-									</select>
-									<span asp-validation-for="AddComunicazione.K_Docente" class="text-danger"></span>
+								<div class="mt-4">
+									<label class="form-label">Testo:</label>
+									<textarea asp-for="AddComunicazione.Testo" class="form-control" rows="6"></textarea>
+									<span asp-validation-for="AddComunicazione.Testo" class="text-danger"></span>
 								</div>
-							}
+								<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button>
+							</form>
+						}
+						else
+						{
+							<form method="post" asp-action="Add">
+								@if (ruolo == "a")
+								{
+									<div class="mt-3">
+										<label class="form-label">Studenti</label>
+										<select asp-for="AddComunicazione.K_Studente" asp-items="@ViewBag.StudentiList" class="form-select">
+											<option selected disabled>-- Seleziona uno studente --</option>
+										</select>
+										<span asp-validation-for="AddComunicazione.K_Studente" class="text-danger"></span>
+									</div>
 
-							<div class="mt-4">
-								<label class="form-label">Testo:</label>
-								<textarea asp-for="AddComunicazione.Testo" class="form-control" rows="6" required></textarea>
-								<span asp-validation-for="AddComunicazione.Testo" class="text-danger"></span>
-							</div>
-
-							<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button>
-						</form>
+									<div class="mt-3">
+										<label class="form-label">Docenti</label>
+										<select asp-for="AddComunicazione.K_Docente" asp-items="@ViewBag.DocentiList" class="form-select">
+											<option selected disabled>-- Seleziona un docente --</option>
+										</select>
+										<span asp-validation-for="AddComunicazione.K_Docente" class="text-danger"></span>
+									</div>
+								}
+								@if (ruolo == "s")
+								{
+									<div class="mt-3">
+										<label class="form-label">Destinatari</label>
+										<select asp-for="AddComunicazione.K_Docente" asp-items="@ViewBag.DocentiList" class="form-select">
+											<option selected disabled>-- Seleziona un destinatario --</option>
+											<option value="">Amministrazione</option>
+										</select>
+										<span asp-validation-for="AddComunicazione.K_Docente" class="text-danger"></span>
+									</div>
+								}
+								<div class="mt-4">
+									<label class="form-label">Testo:</label>
+									<textarea asp-for="AddComunicazione.Testo" class="form-control" rows="6"></textarea>
+									<span asp-validation-for="AddComunicazione.Testo" class="text-danger"></span>
+								</div>
+								<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button>
+							</form>
+						}
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
@@ -218,6 +233,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
+    </div>
 </div>
 
