--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -112,7 +112,7 @@
 						</div>
 						<div class="modal-footer d-flex justify-content-center">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-							<button type="button" class="btn btn-primary" id="conferma-btn">Conferma</button>
+							<button type="button" class="btn btn-primary" id="conferma-btn" asp-controller="Studenti" asp-action="Paypal">Conferma</button>
 						</div>
 					</div>
 				</div>
