--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -1,6 +1,5 @@
-﻿<div style="height:15vh;"></div>
-
-<div class="container mt-2 mb-5">
+﻿
+<div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
 		<!-- Colonna testo -->
 		<div class="col-lg-8 col-md-12">
