--- a/AreaDocente/Views/Prove/List.cshtml
+++ b/AreaDocente/Views/Prove/List.cshtml
@@ -43,12 +43,12 @@
                             <td>@prova.Appello?.DataAppello?.ToString("dd/MM/yyyy")</td>
                             <td>Orale</td>
                             <td>
-                                <a target="_blank" href="@prova.Link" class="btn btn-outline-info btn-sm">
+                                <a target="_blank" href="@prova.Link" class="btn btn-info btn-sm">
                                     <i class="bi bi-link-45deg me-1"></i> Link
                                 </a>
                             </td>
                             <td>
-                                <a class="btn btn-warning btn-sm" asp-controller="Prove" asp-action="Edit" asp-route-id="@prova.K_Prova">
+                                <a class="btn btn-primary btn-sm" asp-controller="Prove" asp-action="Edit" asp-route-id="@prova.K_Prova">
                                     <i class="bi bi-pencil-square me-1"></i> Modifica
                                 </a>
                             </td>
@@ -80,7 +80,7 @@
                         </h2>
                         <div id="@collapseId" class="accordion-collapse collapse" aria-labelledby="@headingId">
                             <div class="accordion-body">
-                                <a target="_blank" href="@prova.Link" class="btn btn-outline-info btn-sm mb-2">
+                                <a target="_blank" href="@prova.Link" class="btn btn-info btn-sm mb-2">
                                     <i class="bi bi-link-45deg me-1"></i> Link
                                 </a>
 
@@ -111,7 +111,7 @@
                                 }
 
                                 <div class="mt-3">
-                                    <a class="btn btn-warning btn-sm" asp-controller="Prove" asp-action="Edit" asp-route-id="@prova.K_Prova">
+                                    <a class="btn btn-primary btn-sm" asp-controller="Prove" asp-action="Edit" asp-route-id="@prova.K_Prova">
                                         <i class="bi bi-pencil-square me-1"></i> Modifica
                                     </a>
                                 </div>
