--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 
-							<h5 class="modal-title" id="loginModalLabel">Login</h5>
+							<h5 class="modal-title" id="loginModalLabel"><i class="bi bi-person-circle"></i> Login</h5>
 
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
 						</div>
@@ -131,7 +131,7 @@
 									<label for="password" class="form-label">Password</label>
 									<input type="password" class="form-control" name="PWD" asp-for="PWD" required>
 								</div>
-								<button type="submit" class="btn btn-primary w-100"><i class="bi bi-person-circle"></i> Login</button>
+								<button type="submit" class="btn btn-primary w-100"> Login</button>
 							</form>
 
 							<div class="text-center mt-3">
