--- a/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
@@ -6,7 +6,7 @@
 		.OrderBy(g => g.Key);
 }
 
-<div class="container" style="padding-top: 120px;">
+<div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
 		<h1 class="mb-4">Corsi di Laurea</h1>
 
@@ -74,5 +74,3 @@
 	</div>
 </div>
 
-<!-- Spazio in fondo -->
-<div style="height:42vh;"></div>
