--- a/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
@@ -5,7 +5,7 @@
 						.GroupBy(x => x.Facolta);
 }
 
-<div class="container" style="padding-top: 120px;">
+<div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
 		<h1 class="mb-4">Esami e Docenti</h1>
 		<div class="col-md-8">
