--- a/AreaPubblica/Views/OffertaFormativa/PianoStudi.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/PianoStudi.cshtml
@@ -2,7 +2,7 @@
 	var dati = ViewBag.PianiStudi as List<dynamic>;
 }
 
-<div class="container" style="padding-top: 120px; padding-bottom: 100px;">
+<div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
 		<h1 class="mb-4">Piano di Studi</h1>
 		<div class="col-md-8">
