--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -157,21 +157,21 @@
 							var ruolo = Context.Session.GetString("r");
 						}
 						<form method="post" asp-action="Add">
-							@if (ruolo == "d")
+							@* @if (ruolo == "d")
 							{
 								<div class="mt-3">
 									<label class="form-label">Esame</label>
-									<select asp-for="AddComunicazione.K_Esame" asp-items="@ViewBag.EsamiList" class="form-select" onchange="this.form.submit()">
+									<select asp-for="AddComunicazione.K_Esame" asp-items="@ViewBag.EsamiList" class="form-select">
 										<option disabled selected>-- Seleziona un esame --</option>
 									</select>
 									<span asp-validation-for="AddComunicazione.K_Esame" class="text-danger"></span>
 								</div>
-							}
-
+							} *@
+@* 
 							@if (ruolo == "d" && ViewBag.SelectedKEsame != null)
 							{
 								<input type="hidden" asp-for="AddComunicazione.K_Esame" value="@ViewBag.SelectedKEsame" />
-							}
+							} *@
 
 							@if (ruolo == "d" || ruolo == "a")
 							{
