--- a/AreaPubblica/Views/OffertaFormativa/Programma.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/Programma.cshtml
@@ -3,7 +3,7 @@
 	var descrizioniCorsi = ViewBag.DescrizioniCorsi as Dictionary<string, string>;
 }
 
-<div class="container" style="padding-top: 120px; padding-bottom: 100px;">
+<div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
 		<h1 class="mb-4">Programma dei Corsi</h1>
 
