--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -128,7 +128,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <asp:Button ID="Button1" runat="server" Text="Logout" class="btn btn-light btn-sm" OnClick="btnLogout_Click" />
+                                    <asp:Button ID="Button1" runat="server" Text="Area Studente" class="btn btn-light btn-sm" OnClick="btnLogout_Click" />
 
 
                                 </li>
