--- a/AreaDocente/Views/Appelli/List.cshtml
+++ b/AreaDocente/Views/Appelli/List.cshtml
@@ -39,7 +39,7 @@
 		<tfoot>
 			<tr>
 				<td colspan="4">
-					<a class="btn btn-success" asp-controller="Appelli" asp-action="Add">
+					<a class="btn btn-primary" asp-controller="Appelli" asp-action="Add">
 						<i class="bi bi-plus-circle me-1"></i> Inserisci nuovo appello
 					</a>
 				</td>
