--- a/AreaDocente/Views/Lezioni/Edit.cshtml
+++ b/AreaDocente/Views/Lezioni/Edit.cshtml
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="mt-4 d-flex justify-content-end gap-2">
-                    <button type="submit" class="btn btn-success btn-lg">
+                    <button type="submit" class="btn btn-primary btn-lg">
                         <i class="bi bi-pencil-square me-1"></i> Modifica
                     </button>
                     <button type="submit" class="btn btn-danger btn-lg " asp-controller="Lezioni" asp-action="Delete">
