--- a/AreaDocente/Views/Appelli/Add.cshtml
+++ b/AreaDocente/Views/Appelli/Add.cshtml
@@ -33,9 +33,12 @@
                 <input type="text" class="form-control" asp-for="Link" placeholder="Inserisci il link dell'appello" required />
             </div>
 
-            <div class="mt-3">
-                <button type="submit" class="btn btn-success btn-lg w-100">
+			<div class="d-flex justify-content-end mt-3 gap-2">
+                <button type="submit" class="btn btn-primary btn-lg">
                     <i class="bi bi-save me-1"></i> Salva
+                </button>
+                <button type="submit" class="btn btn-secondary btn-lg" asp-controller="Appelli" asp-action="Annulla">
+                    <i class="bi bi-arrow-90deg-left me-1"></i> Annulla
                 </button>
             </div>
 
