--- a/AreaDocente/Views/Lezioni/List.cshtml
+++ b/AreaDocente/Views/Lezioni/List.cshtml
@@ -34,7 +34,7 @@
         <tfoot>
             <tr>
                 <td colspan="4">
-                    <a class="btn btn-success" asp-controller="Lezioni" asp-action="Add">
+                    <a class="btn btn-primary" asp-controller="Lezioni" asp-action="Add">
                         <i class="bi bi-plus-circle me-1"></i> Inserisci nuova lezione
                     </a>
                 </td>
