--- a/AreaDocente/Views/Materiali/List.cshtml
+++ b/AreaDocente/Views/Materiali/List.cshtml
@@ -48,8 +48,8 @@
                         <div class="d-flex justify-content-start gap-2" style="min-width: 180px;">
                             @if (IsViewableInBrowser(mat.Tipo))
                             {
-                                <a asp-action="View" target="_blank" asp-route-id="@mat.K_Materiale" class="btn btn-outline-primary btn-sm" style="min-width: 99.25px">
-                                    <i class="bi @iconClass me-1"></i> Visualizza
+                                <a asp-action="View" target="_blank" asp-route-id="@mat.K_Materiale" class="btn btn-outline-info btn-sm" style="min-width: 99.25px">
+                                    <i class="bi-file-earmark-arrow-down-fill @iconClass me-1"></i> Visualizza
                                 </a>
                             }
                             else
@@ -78,7 +78,7 @@
         <tfoot>
             <tr>
                 <td colspan="4">
-                    <a class="btn btn-success" asp-controller="Materiali" asp-action="Add">
+                    <a class="btn btn-primary" asp-controller="Materiali" asp-action="Add">
                         <i class="bi bi-plus-circle me-1"></i> Inserisci nuovo materiale
                     </a>
                 </td>
