--- a/AreaPubblica/Views/Didattica/Index.cshtml
+++ b/AreaPubblica/Views/Didattica/Index.cshtml
@@ -2,18 +2,14 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<div style="height:15vh;"></div>
-
-<div class="container ms-5 mt-4 mb-5">
-
+<div style="padding-top: 120px;"></div>
+@* <div class="container"> *@
 	<div class="row">
-		<div class="col-12">
+		<div class="col-2"></div>
+		<div class="col-7">
 			<h1>Calendario accademico e appelli d'esame</h1>
-		</div>
-	</div>
 
-	<div class="row">
-		<div class="col-md-8">
+
 			<h2 class="mt-4">Lauree e lauree magistrali</h2>
 			<h5 class="mt-3">
 				Il calendario contiene le scadenze relative a tutte le lauree triennali e magistrali di UniGen.
@@ -73,12 +69,10 @@
 					<p class="card-text">Fine Sessione esami <b>maggio-giugno</b> - area linguistica/scientifica</p>
 				</div>
 			</div>
-		</div>
 
-		<div class="col-md-4">
-			<div style="position: sticky; top: 80px;">
-				<img src="~/sources/calend.jpg" class="img-fluid rounded shadow" alt="Calendario accademico" />
-			</div>
+		</div>
+		<div class="col-3" style="top: 80px;">
+		<img style="margin-left: 5%; margin-top: 20%; width: 80%;" src="~/sources/calend.jpg" class="img-fluid rounded shadow" alt="Calendario accademico" />
 		</div>
 	</div>
 </div>
