--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -34,6 +34,30 @@
 			right: 0; /* Posiziona il link a destra */
 		}
 
+		/* .custom-vh {
+			min-height: 100vh;
+		} */
+
+		footer {
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			right: 0;
+			left: 0;
+			bottom: 0;
+		}
+
+		html {
+			height:100%;
+		}
+
+		body {
+			height: 100%;
+			margin: 0;
+			position: relative;
+			padding-bottom: 6.74rem;
+		}
+
 	</style>
 
 </head>
@@ -109,7 +133,7 @@
 		</div>
 	</header>
 
-	<div class="">
+	<div class="d-flex flex-column custom-vh">
 		<main role="main" class="">
 			<!-- Modale Login -->
 			<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
@@ -153,9 +177,10 @@
 			@RenderBody()
 		</main>
 	</div>
+	@* <div class="d-flex flex-column mt-3 mb-3" style="height: 10vh;"></div> *@
 
-	<footer>
-		<div class="bg-dark text-white position-sticky">
+	<footer class="bg-dark text-white mt-auto">
+		<div class="bg-dark text-white mt-auto">
 			<div class="container d-flex justify-content-between align-items-end flex-wrap">
 				<div>
 					<img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
