--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -70,7 +70,7 @@
 							</div>
 							<div class="col-12 col-lg-3 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">CAP</label>
-								<input type="text" asp-for="CAP" class="form-control form-control-alternative" maxlength="5" required />
+								<input type="text" asp-for="CAP" class="form-control form-control-alternative" pattern="\d*" inputmode="numeric" maxlength="5" required />
 							</div>
 						</div>
 
@@ -84,21 +84,30 @@
 								<input type="text" asp-for="Provincia" class="form-control text-uppercase form-control-alternative" maxlength="2" required />
 							</div>
 						</div>
-						<div class="text-center">
-							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal">Procedi</button>
-						</div>
+
+						@if (ViewData.ModelState.IsValid && @Model.K_Corso.ToString() != "")
+						{
+							<div class="text-center">
+								<button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal">Procedi</button>
+							</div>
+						}else
+						{
+							<div class="text-center">
+								<button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal" disabled>Procedi</button>
+							</div>
+						}
 					</div>
 				</div>
 			</div>
 
 			<!-- Modal -->
-		
+
 			<div class="modal fade" id="confermaModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="modalLabel">Conferma Iscrizione</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+						<div class="modal-header justify-content-center">
+							<h5 class="modal-title text-center w-100" id="modalLabel">Conferma Iscrizione</h5>
+							<button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal" aria-label="Chiudi"></button>
 						</div>
 						<div class="modal-body">
 							Vuoi confermare l'immatricolazione? L'importo è: €@Model.Importo
